--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,7 +1,7 @@
 <mat-list role="list">
     <mat-list-item role="listitem">Use Angular Material ✅</mat-list-item>
     <mat-list-item role="listitem">Use Routing ✅</mat-list-item>
-    <mat-list-item role="listitem">Use Pipe for searcing</mat-list-item>
+    <mat-list-item role="listitem">Use Pipe for searcing ✅</mat-list-item>
     <mat-list-item role="listitem">Delete rows in Inbox</mat-list-item>
     <mat-list-item role="listitem">Flag and highlight rows in Inbox</mat-list-item>
     <mat-list-item role="listitem">Sort Products by low and high price</mat-list-item>
