--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -5,7 +5,7 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="/home">Home</a>
+      <a mat-list-item href="../">Home</a>
       <a mat-list-item href="/shop">Shop</a>
       <a mat-list-item href="/inbox">Inbox</a>
       <a mat-list-item href="/profile">Profile</a>
