--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,10 +1,12 @@
 <div class="grid-container">
   <h1 class="mat-h1">Product List</h1>
   <div class="form-group">
-    <input type="text" class="form-control mb-4" placeholder="Search" [(ngModel)]="query" id="listSearch">
+    <button mat-raised-button color="primary">Low Price</button>
+    <button mat-raised-button color="accent">High Price</button>
+    <input type="text" class="form-control mb-4" placeholder="Search" [(ngModel)]="query">
   </div>
   <mat-grid-list cols="4" rowHeight="450px">
-    <mat-grid-tile *ngFor="let card of cards | async | searchFilter:query " [colspan]="card.cols" [rowspan]="card.rows">
+    <mat-grid-tile *ngFor="let card of cards | async | sort:'price' | searchFilter:query " [colspan]="card.cols" [rowspan]="card.rows">
       <mat-card class="dashboard-card">
         <mat-card-header>
           <mat-card-title>
@@ -14,7 +16,7 @@
         <mat-card-content class="dashboard-card-content">
           <div>Card Content Here</div>
           <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-          Card description
+          ¥{{card.price}}
         </mat-card-content>
       </mat-card>
     </mat-grid-tile>
