--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -4,5 +4,5 @@
     <mat-list-item role="listitem">Use Pipe for searcing ✅</mat-list-item>
     <mat-list-item role="listitem">Delete rows in Inbox</mat-list-item>
     <mat-list-item role="listitem">Flag and highlight rows in Inbox</mat-list-item>
-    <mat-list-item role="listitem">Sort Products by low and high price</mat-list-item>
+    <mat-list-item role="listitem">Sort Products by low and high price ✅</mat-list-item>
   </mat-list>
