--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,24 +1,20 @@
-<div class="grid-container">
-  <h1 class="mat-h1">Dashboard</h1>
-  <mat-grid-list cols="2" rowHeight="350px">
-    <mat-grid-tile *ngFor="let card of cards | async" [colspan]="card.cols" [rowspan]="card.rows">
-      <mat-card class="dashboard-card">
-        <mat-card-header>
-          <mat-card-title>
-            {{card.title}}
-            <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
-              <mat-icon>more_vert</mat-icon>
-            </button>
-            <mat-menu #menu="matMenu" xPosition="before">
-              <button mat-menu-item>Expand</button>
-              <button mat-menu-item>Remove</button>
-            </mat-menu>
-          </mat-card-title>
-        </mat-card-header>
-        <mat-card-content class="dashboard-card-content">
-          <div>Card Content Here</div>
-        </mat-card-content>
-      </mat-card>
-    </mat-grid-tile>
-  </mat-grid-list>
-</div>
+  <div class="row">
+    <div class="col-1 menu">
+      <h2>Joe Trubenstein</h2>
+      
+    </div>
+    <div class="col-2 right">
+      <div class="aside">
+        <h2>What?</h2>
+        <p>Chania is a city on the island of Crete.</p>
+        <h2>Where?</h2>
+        <p>Crete is a Greek island in the Mediterranean Sea.</p>
+        <h2>How?</h2>
+        <p>You can reach Chania airport from all over Europe.</p>
+      </div>
+    </div>
+  </div>
+  
+  <div class="footer">
+    <p>Resize the browser window to see how the content respond to the resizing.</p>
+  </div>
