--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,8 +1,42 @@
-<mat-list role="list">
-    <mat-list-item role="listitem">Use Angular Material ✅</mat-list-item>
-    <mat-list-item role="listitem">Use Routing ✅</mat-list-item>
-    <mat-list-item role="listitem">Use Pipe for searcing ✅</mat-list-item>
-    <mat-list-item role="listitem">Delete rows in Inbox</mat-list-item>
-    <mat-list-item role="listitem">Flag and highlight rows in Inbox</mat-list-item>
-    <mat-list-item role="listitem">Sort Products by low and high price ✅</mat-list-item>
-  </mat-list>
+
+<section class="container">
+    <!-- 
+
+    <div class="my_class" (click)="clickEvent()"  
+    [ngClass]="status ? 'success' : 'danger'">                
+     Some content
+</div> -->
+
+    <!-- <header class="header">
+      <h1>Todo</h1>
+      <input class="new-todo"
+         placeholder="What needs to be done?"
+         [(ngModel)]="newTodo"
+         (keyup.enter)="addTodo()"
+         autofocus>
+    </header>
+   -->
+    <!-- This section should be hidden by default and shown when there are todos -->
+
+
+    <mat-list class="todo-list">
+        <mat-list-item *ngFor="let todo of todos" [ngClass]="{completed: todo.isDone, editing: todo.editing}">
+            <div class="view">
+                <input class="toggle" type="checkbox" [checked]="todo.isDone" (click)="toggleTodo(todo)">
+                 <mat-icon aria-hidden="false" (click)="flagTodo(todo)" [ngClass]="!todo.isFlagged ? 'success' : 'danger'" aria-label="Example home icon">flag</mat-icon>
+                 <mat-icon aria-hidden="false" (click)="destroyTodo(todo)" aria-label="Example home icon">delete</mat-icon>
+                <label (dblclick)="todo.editing = true">{{todo.title}}</label>
+
+            </div>
+
+        </mat-list-item>
+
+    </mat-list>
+
+
+    <mat-icon aria-hidden="false" (click)="clearCompleted()" aria-label="Example home icon">delete</mat-icon>
+    <button class="clear-completed" (click)="clearCompleted()">Clear completed</button>
+    <h1>55
+
+    </h1>
+    <mat-icon aria-hidden="false" (click)="flagSelected()" aria-label="Example home icon">flag</mat-icon>
