--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -21,7 +21,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>Trubenstein Shop</span>
+      <span>Trubenstein Angular Challenge</span>
     </mat-toolbar>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
