--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -2,7 +2,7 @@
     <mat-list-item role="listitem">Use Angular Material ✅</mat-list-item>
     <mat-list-item role="listitem">Use Routing ✅</mat-list-item>
     <mat-list-item role="listitem">Use Pipe for searcing ✅</mat-list-item>
-    <mat-list-item role="listitem">Implement delete functionality in Inbox ✅</mat-list-item>
-    <mat-list-item role="listitem">Implement flagging and highlighting in Inbox ✅</mat-list-item>
+    <mat-list-item role="listitem">Delete functionality in Inbox ✅</mat-list-item>
+    <mat-list-item role="listitem">Flagging and highlighting in Inbox ✅</mat-list-item>
     <mat-list-item role="listitem">Sort Products by low and high price ✅</mat-list-item>
   </mat-list>
