--- a/src/app/todo/todo.component.css
+++ b/src/app/todo/todo.component.css
@@ -1,7 +1,70 @@
 .container {
 width: 100%;
+margin-top: 10px;
+padding: 5px;
 }
 
-.danger {
-    color:blue;
+.top-bar {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
 }
+
+.email-list {
+    background-color: white;
+}
+
+.new-message-button {
+    color: white;
+    background-color: cornflowerblue;
+}
+
+.message-body {
+ margin-left: 40px;
+}
+
+.more-button {
+    margin-left: auto;
+    padding-right: 20px;
+}
+
+.line-item {
+    padding: 5px;
+    display: flex;
+    width: 100%;
+}
+
+.search-input {
+    width: 40%;
+  }
+
+.highlight {
+    background-color:#FCE4EC;
+}
+
+@media only screen and (max-width: 800px) {
+    
+    .top-bar {
+        text-align: center;
+        display: block;
+        margin-bottom: 20px;
+    }
+
+    .search-input {
+        margin-top: 5px;
+        margin-bottom: 5px;
+        height: 35px;
+        width: 100%;
+      }
+
+    .new-email-alert {
+        display: none;
+    } 
+
+    .message-body {
+        width: 175px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+       }
+  }
