--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -2,6 +2,12 @@
     box-sizing: border-box;
   }
   
+
+  .col-1 {
+    text-align: center;
+    margin: 0;
+  }
+
   .row::after {
     content: "";
     clear: both;
@@ -14,20 +20,37 @@
   }
   
   .aside {
-    background-color: #33b5e5;
     padding: 15px;
-    color: #ffffff;
-    text-align: center;
+    text-align: left;
     font-size: 14px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  }
+
+  .half-input {
+    width: 50%;
+  }
+
+  .full-input {
+    width: 100%;
+    height: 200px;
+  }
+
+  img {
+	  width: 250px;
+	  height: 250px;
+  	border-radius: 50%;
+	  overflow: hidden;
+	  box-shadow: 0 5px 5px 0px rgba(0,0,0,0.6);
+  }
+
+  .upload-button {
+    margin-top:20px
   }
   
   .footer {
-    background-color: #0099cc;
-    color: #ffffff;
-    text-align: center;
-    font-size: 12px;
-    padding: 15px;
+
+    text-align: right;
+    margin-right: 30px;
+
   }
   
   /* For desktop: */
