--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -68,6 +68,8 @@ margin-bottom:30px;
   color:deeppink;
 }
 
+/* Need to check if media queries in CSS like this are best practice for Angular */
+/* There is probably a better way to make the material grid list responsive */
 @media only screen and (max-width: 800px) {
   .search-bar {
     text-align: center;
