--- a/src/app/features/nav/nav.component.html
+++ b/src/app/features/nav/nav.component.html
@@ -5,10 +5,22 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="../">Home</a>
-      <a mat-list-item href="/shop">Shop</a>
-      <a mat-list-item href="/inbox">Inbox</a>
-      <a mat-list-item href="/profile">Profile</a>
+      <a mat-list-item href="../">
+        <mat-icon class="nav-icon" aria-hidden="false" aria-label="Outlined Flag Icon">home</mat-icon>
+        Home
+      </a>
+      <a mat-list-item href="/shop">
+        <mat-icon class="nav-icon" aria-hidden="false" aria-label="Shop Icon">shopping_cart</mat-icon>
+        Shop
+      </a>
+      <a mat-list-item href="/profile">
+        <mat-icon class="nav-icon" aria-hidden="false" aria-label="Cart Icon">inbox</mat-icon>
+        Profile
+      </a>
+      <a mat-list-item href="/inbox">
+        <mat-icon class="nav-icon" aria-hidden="false" aria-label="Profile Icon">account_box</mat-icon>
+        Inbox
+      </a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
