--- a/src/app/features/nav/nav.component.html
+++ b/src/app/features/nav/nav.component.html
@@ -14,11 +14,11 @@
         Shop
       </a>
       <a mat-list-item href="/profile">
-        <mat-icon class="nav-icon" aria-hidden="false" aria-label="Cart Icon">inbox</mat-icon>
+        <mat-icon class="nav-icon" aria-hidden="false" aria-label="Profile Icon">account_box</mat-icon>
         Profile
       </a>
       <a mat-list-item href="/inbox">
-        <mat-icon class="nav-icon" aria-hidden="false" aria-label="Profile Icon">account_box</mat-icon>
+        <mat-icon class="nav-icon" aria-hidden="false" aria-label="Inbox Icon">inbox</mat-icon>
         Inbox
       </a>
     </mat-nav-list>
